align wide / full fix

--- a/source/assets/stylesheets/_wordcamp.lodz.scss
+++ b/source/assets/stylesheets/_wordcamp.lodz.scss
@@ -305,6 +305,10 @@
 
             max-width: 1000px;
             transform: translateX(-100px);
+
+            img {
+                max-width: none;
+            }
     
         }
     }
